Began fixing inheritance of Person, Member, and SessionMember.